--- a/11thLauncher/Views/Controls/ParametersView.xaml
+++ b/11thLauncher/Views/Controls/ParametersView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:model="clr-namespace:_11thLauncher.Model.Parameter"
+             xmlns:model="clr-namespace:_11thLauncher.Models"
              xmlns:util="clr-namespace:_11thLauncher.Views.Util"
              xmlns:resx="clr-namespace:_11thLauncher.Resources"
              mc:Ignorable="d" 
