--- a/11thLauncher/Views/SettingsView.xaml
+++ b/11thLauncher/Views/SettingsView.xaml
@@ -25,7 +25,7 @@
         <util:CultureDisplayConverter x:Key="CultureConverter" />
     </Control.Resources>
     <Grid>
-        <controls:MetroTabControl HorizontalAlignment="Left" TabStripPlacement="Left" controls:TabControlHelper.Underlined="TabPanel">
+        <controls:MetroTabControl HorizontalAlignment="Left" TabStripPlacement="Left" controls:TabControlHelper.Underlined="TabPanel" Width="685">
             <TabItem Header="{x:Static resx:Strings.S_SETTINGS_GENERAL}">
                 <Grid>
                     <Label Content="{x:Static resx:Strings.S_LABEL_GAME_OPTIONS}"
@@ -56,7 +56,7 @@
                         Margin="119,163,0,0" SelectedIndex="0" />
                 </Grid>
             </TabItem>
-            <TabItem Header="Repositorio">
+            <TabItem Header="{x:Static resx:Strings.S_SETTINGS_REPOSITORY}">
                 <Grid Width="542">
                     <StackPanel HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" VerticalAlignment="Top" Width="522">
                         <Label Content="Opciones de java" FontWeight="Bold"/>
@@ -66,7 +66,23 @@
                     <TextBox x:Name="textBox_javaPath" HorizontalAlignment="Left" Height="23" Margin="131,106,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="296" IsReadOnly="True"/>
                     <Button x:Name="button_selectJavaPath" Content="Seleccionar" HorizontalAlignment="Left" Margin="432,106,0,0" VerticalAlignment="Top" Width="100"/>
                     <Label Content="NOTA: Solamente indicar la ruta de Java si no se &#xA;ha detectado en PATH o si se quiere utilizar una &#xA;versión distinta. JRE's compatibles: 7 y 8." HorizontalAlignment="Left" Margin="247,40,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.026,-0.038" FontWeight="Medium" Width="285" Height="66"/>
-                    <Label x:Name="label_javaPath" Content="No detectado" HorizontalAlignment="Left" Margin="128,42,0,0" VerticalAlignment="Top" Foreground="Red" ToolTip="No se ha detectado Java en PATH" FontWeight="Bold"/>
+
+                    <Label HorizontalAlignment="Left" Margin="128,42,0,0" VerticalAlignment="Top" FontWeight="Bold">
+                        <Label.Style>
+                            <Style TargetType="{x:Type Label}">
+                                <Setter Property="Content" Value="{x:Static resx:Strings.S_LABEL_JAVA_UNDETECTED}" />
+                                <Setter Property="ToolTip" Value="{x:Static resx:Strings.S_LABEL_JAVA_UNDETECTED_TIP}" />
+                                <Setter Property="Foreground" Value="Red" />
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding JavaDetected}" Value="True">
+                                        <Setter Property="Content" Value="{x:Static resx:Strings.S_LABEL_JAVA_DETECTED}" />
+                                        <Setter Property="ToolTip" Value="{Binding JavaVersion}" />
+                                        <Setter Property="Foreground" Value="Green" />
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Label.Style>
+                    </Label>
                     <Label Content="Ruta de Arma3Sync:" HorizontalAlignment="Left" Margin="10,182,0,0" VerticalAlignment="Top"/>
                     <TextBox x:Name="textBox_a3sPath" HorizontalAlignment="Left" Height="23" Margin="131,183,0,0" VerticalAlignment="Top" Width="296" IsReadOnly="True"/>
                     <Button x:Name="button_selectA3sPath" Content="Seleccionar" HorizontalAlignment="Left" Margin="432,183,0,0" VerticalAlignment="Top" Width="100"/>
@@ -77,7 +93,7 @@
                     <ComboBox x:Name="comboBox_repository" HorizontalAlignment="Left" Margin="131,222,0,0" VerticalAlignment="Top" Width="200"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="Interfaz">
+            <TabItem Header="{x:Static resx:Strings.S_SETTINGS_INTERFACE}">
                 <Grid Width="542">
                     <Label Content="{x:Static resx:Strings.S_LABEL_INTERFACE_SETTINGS}" FontWeight="Bold" 
                            HorizontalAlignment="Left" VerticalAlignment="Top"  Width="522" Margin="10,10,0,0" />
@@ -85,10 +101,10 @@
                     <Label Content="{x:Static resx:Strings.S_LABEL_LANGUAGE}" HorizontalAlignment="Left" Margin="10,36,0,0" VerticalAlignment="Top"/>
                     <ComboBox x:Name="Languages"
                               HorizontalAlignment="Left" Margin="148,36,0,0" VerticalAlignment="Top" Width="174" 
-                              cal:Message.Attach="[Event SelectionChanged] = [Action Theme_SelectionChanged];" >
+                              cal:Message.Attach="[Event SelectionChanged] = [Action Language_SelectionChanged];" >
                         <ComboBox.ItemTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Path=., Converter={StaticResource CultureConverter}}"/>
+                                <TextBlock Text="{Binding Converter={StaticResource CultureConverter}}"/>
                             </DataTemplate>
                         </ComboBox.ItemTemplate>    
                     </ComboBox>
@@ -116,8 +132,9 @@
                     <Label Content="{x:Static resx:Strings.S_LABEL_RESET_SETTINGS}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,38,0,0"/>
                     <Button x:Name="DeleteSettings" Content="{x:Static resx:Strings.S_BTN_RESET_SETTINGS}" 
                             HorizontalAlignment="Left" VerticalAlignment="Top" Margin="182,39,0,0"  Width="103"/>
-                    <Label Content="{x:Static resx:Strings.S_LABEL_RESET_DISCLAIMER}" FontWeight="Medium"
-                           HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,71,0,0"  Width="516"/>
+                    <Label HorizontalAlignment="Left" VerticalAlignment="Top" Margin="290,29,0,0"  Width="242" Height="54">
+                        <AccessText Text="{x:Static resx:Strings.S_LABEL_RESET_DISCLAIMER}" FontWeight="Medium" TextWrapping="WrapWithOverflow" />
+                    </Label>
                 </Grid>
             </TabItem>
         </controls:MetroTabControl>
