--- a/11thLauncher/Views/ShellView.xaml
+++ b/11thLauncher/Views/ShellView.xaml
@@ -32,7 +32,7 @@
 
     <controls:MetroWindow.RightWindowCommands>
         <controls:WindowCommands ShowLastSeparator="False">
-            <Button x:Name="ButtonSettings" cal:Message.Attach="ButtonSettings" 
+            <Button cal:Message.Attach="ButtonSettings" 
                     ToolTip="{x:Static resx:Strings.S_BTN_SETTINGS_TIP}" >
                 <StackPanel Orientation="Horizontal">
                     <Rectangle Width="20" Height="20" Margin="0,0,5,0" Fill="{DynamicResource HighlightBrush}">
@@ -43,7 +43,7 @@
                     <TextBlock Margin="0,1,0,0"><Run Text="{x:Static resx:Strings.S_BTN_SETTINGS}"/></TextBlock>
                 </StackPanel>
             </Button>
-            <Button x:Name="ButtonAbout" cal:Message.Attach="ButtonAbout" 
+            <Button cal:Message.Attach="ButtonAbout" 
                     Content="{x:Static resx:Strings.S_BTN_ABOUT}"
                     ToolTip="{x:Static resx:Strings.S_BTN_ABOUT_TIP}" />
         </controls:WindowCommands>
