--- a/11thLauncher/Views/Controls/RepositoryStatusView.xaml
+++ b/11thLauncher/Views/Controls/RepositoryStatusView.xaml
@@ -3,71 +3,71 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:vm="clr-namespace:_11thLauncher.ViewModels.Controls"
              xmlns:model="clr-namespace:_11thLauncher.Models"
+             xmlns:main="clr-namespace:_11thLauncher"
              xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro.Platform"
              xmlns:resx="clr-namespace:_11thLauncher.Resources"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=vm:RepositoryStatusViewModel}" d:DesignHeight="337" d:DesignWidth="615">
 
-    <Expander Header="Servidores" HorizontalAlignment="Left" VerticalAlignment="Top" Height="117" Width="185" IsExpanded="True" Margin="430,210,0,0" Padding="0">
-        <ScrollViewer VerticalScrollBarVisibility="Auto">
-            <ItemsControl x:Name="Servers" d:DataContext="{Binding Servers}"
-                            BorderBrush="#FFCCCCCC"
-                            BorderThickness="0">
-                <ItemsControl.ItemTemplate>
-                    <HierarchicalDataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <Rectangle ToolTip="Rellenar información del servidor"
-                                        cal:Message.Attach="FillServerInfo($datacontext)"
-                                        Height="15" Width="15"
-                                        Margin="5,0" IsHitTestVisible="True" >
-                                <Rectangle.OpacityMask>
-                                    <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_list}" />
-                                </Rectangle.OpacityMask>
-                                <Rectangle.Style>
-                                    <Style TargetType="Rectangle">
-                                        <Setter Property="Fill" Value="{DynamicResource TextBrush}" />
-                                        <Style.Triggers>
-                                            <Trigger Property="IsMouseOver" Value="True">
-                                                <Setter Property="Fill">
-                                                    <Setter.Value>
-                                                        <SolidColorBrush Color="{DynamicResource AccentColor}" />
-                                                    </Setter.Value>
-                                                </Setter>
-                                            </Trigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Rectangle.Style>
-                            </Rectangle>
-                            <Label Content="{Binding Name}" Width="75" />
-                            <Rectangle x:Name="Status" ToolTip="{x:Static resx:Strings.S_BTN_CHECK_SERVER_STATUS_TIP}"
-                                        cal:Message.Attach="CheckServerStatus($datacontext)"
-                                        Height="15" Width="15"
-                                        Margin="5,0" IsHitTestVisible="True">
-                                <Rectangle.OpacityMask>
-                                    <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_layer_thick}" />
-                                </Rectangle.OpacityMask>
-                            </Rectangle>
-                            <Label x:Name="label_coopPlayers" Content="{Binding ServerInfo.CurrentPlayers}" />
-                        </StackPanel>
-                        <HierarchicalDataTemplate.Triggers>
-                            <DataTrigger Binding="{Binding ServerStatus}" Value="{x:Static model:ServerStatus.Unknown}">
-                                <Setter TargetName="Status" Property="Rectangle.Fill" Value="#888888"></Setter>
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding ServerStatus}" Value="{x:Static model:ServerStatus.Checking}">
-                                <Setter TargetName="Status" Property="Rectangle.Fill" Value="#888888"></Setter>
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding ServerStatus}" Value="{x:Static model:ServerStatus.Offline}">
-                                <Setter TargetName="Status" Property="Rectangle.Fill" Value="#BD3400"></Setter>
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding ServerStatus}" Value="{x:Static model:ServerStatus.Online}">
-                                <Setter TargetName="Status" Property="Rectangle.Fill" Value="#56B812"></Setter>
-                            </DataTrigger>
-                        </HierarchicalDataTemplate.Triggers>
-                    </HierarchicalDataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </ScrollViewer>
-    </Expander>
+    <Grid>
+        <Expander Header="{x:Static resx:Strings.S_LABEL_REPOSITORIES}" HorizontalAlignment="Left" VerticalAlignment="Top" Height="117" Width="185" IsExpanded="True" Margin="430,210,0,0" Padding="0">
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <ItemsControl x:Name="Repositories" d:DataContext="{Binding Repositories}"
+                              BorderBrush="#FFCCCCCC"
+                              BorderThickness="0">
+                    <ItemsControl.ItemTemplate>
+                        <HierarchicalDataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <Label Content="{Binding Name}" Width="75" />
+                                <controls:Tile x:Name="RepositoryStatus" Content="{x:Static model:RepositoryStatus.Unknown}" 
+                                               cal:Message.Attach="CheckRepositoryStatus($datacontext)" IsEnabled="{Binding Arma3SyncUpdated}"
+                                               HorizontalAlignment="Left" VerticalAlignment="Top" 
+                                               Height="18" Width="90" Margin="-10,3,3,3"/>
+                            </StackPanel>
+                            <HierarchicalDataTemplate.Triggers>
+                                <DataTrigger Binding="{Binding Status}" Value="{x:Static model:RepositoryStatus.Unknown}">
+                                    <Setter TargetName="RepositoryStatus" Property="controls:Tile.Background" Value="#888888"/>
+                                    <Setter TargetName="RepositoryStatus" Property="Content" Value="{x:Static resx:Strings.S_BTN_REPOSITORY_UNKNOWN}"/>
+                                    <Setter TargetName="RepositoryStatus" Property="controls:Tile.ToolTip" Value="{x:Static resx:Strings.S_BTN_REPOSITORY_UNKNOWN_TIP}"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding Status}" Value="{x:Static model:RepositoryStatus.Checking}">
+                                    <Setter TargetName="RepositoryStatus" Property="controls:Tile.Background" Value="#888888"/>
+                                    <Setter TargetName="RepositoryStatus" Property="Content" Value="{x:Static resx:Strings.S_BTN_REPOSITORY_UNKNOWN}"/>
+                                    <Setter TargetName="RepositoryStatus" Property="controls:Tile.ToolTip" Value="{x:Static resx:Strings.S_BTN_REPOSITORY_UNKNOWN_TIP}"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding Status}" Value="{x:Static model:RepositoryStatus.Updated}">
+                                    <Setter TargetName="RepositoryStatus" Property="controls:Tile.Background" Value="#56B812"/>
+                                    <Setter TargetName="RepositoryStatus" Property="Content" Value="{x:Static resx:Strings.S_BTN_REPOSITORY_UPDATED}"/>
+                                    <Setter TargetName="RepositoryStatus" Property="controls:Tile.ToolTip" Value="{x:Static resx:Strings.S_BTN_REPOSITORY_UPDATED_TIP}"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding Status}" Value="{x:Static model:RepositoryStatus.Outdated}">
+                                    <Setter TargetName="RepositoryStatus" Property="controls:Tile.Background" Value="#BD3400"/>
+                                    <Setter TargetName="RepositoryStatus" Property="Content" Value="{x:Static resx:Strings.S_BTN_REPOSITORY_OUTDATED}"/>
+                                    <Setter TargetName="RepositoryStatus" Property="controls:Tile.ToolTip" Value="{x:Static resx:Strings.S_BTN_REPOSITORY_OUTDATED_TIP}"/>
+                                </DataTrigger>
+                            </HierarchicalDataTemplate.Triggers>
+                        </HierarchicalDataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
+        </Expander>
+        <Image Source="{Binding Arma3SyncIcon}"
+               HorizontalAlignment="Left" VerticalAlignment="Top" 
+               Height="20" Width="20" Margin="588,216,0,0" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action StartArma3Sync]">
+            <Image.Style>
+                <Style TargetType="Image">
+                    <Setter Property="ToolTip" Value="{x:Static resx:Strings.S_A3S_DISABLED_TIP}"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Arma3SyncIcon}" Value="{x:Static main:Constants.Arma3SyncIconEnabled}">
+                            <Setter Property="ToolTip" Value="{x:Static resx:Strings.S_A3S_ENABLED_TIP}"></Setter>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Image.Style>
+        </Image>
+    </Grid>
+    
 </UserControl>
